# aoc

./: .gitignore  Cargo.toml  pyproject.toml
aoc23/: Cargo.toml  aoc23.py  justfile  pyproject.toml
aoc23/1/: Cargo.toml  main.py
aoc23/2/: main.py
aoc23/3/: main.py
aoc23/6/: main.py
aoc23/7/: main.py
aoc23/8/: Cargo.toml  main.py
aoc23/9/: Cargo.toml  main.py
aoc23/aoc23-10/: Cargo.toml  main.py  part1.rs
aoc23/daily-template/: Cargo.toml  main.py  part1.py  part2.py
aoc23/day-10/: Cargo.toml  main.py  part1.py  part2.py
aoc23/day-11/: Cargo.toml  main.py  part1.py  part2.py
aoc23/day-12/: Cargo.toml  main.py  part1.py  part2.py
aoc23/day-13/: Cargo.toml  main.py  part1.py  part2.py
aoc23/day-14/: Cargo.toml  main.py  part1.py  part2.py
aoc23/day-15/: Cargo.toml  main.py  part1.py  part2.py
aoc23/day-16/: Cargo.toml  main.py  part1.py  part2.py
aoc23/day-17/: Cargo.toml  main.py  part1.py  part2.py
aoc23/day-18/: Cargo.toml  main.py  part1.py  part2.py
aoc23/day-19/: Cargo.toml  main.py  part1.py  part2.py
aoc23/day-2/: Cargo.toml  main.py
aoc23/day-20/: Cargo.toml  main.py  part1.py  part2.py
aoc23/day-21/: Cargo.toml  main.py  part1.py  part2.py
aoc23/day-22/: Cargo.toml  main.py  part1.py
aoc23/day-3/: Cargo.toml  main.py
aoc23/day-4/: Cargo.toml  main.py
aoc23/day-5/: Cargo.toml  main.py
aoc23/day-6/: Cargo.toml  main.py
aoc23/day-7/: main.py
aoc23/day-8/: main.py
aoc23/day-9/: Cargo.toml  main.py
aoc24/: Cargo.toml  aoc24.py  cargo-generate.toml  justfile  pyproject.toml
aoc24/daily-template/: part2.py
aoc24/day-1/: Cargo.toml  main.py  part1.py  part2.py
aoc24/day-10/: Cargo.toml  main.py  part1.py  part2.py
aoc24/day-11/: Cargo.toml  main.py  part1.py  part2.py
aoc24/day-12/: Cargo.toml  main.py  part1.py  part2.py
aoc24/day-13/: Cargo.toml  main.py  part1.py  part2.py
aoc24/day-14/: Cargo.toml  main.py  part1.py  part2.py
aoc24/day-15/: Cargo.toml  main.py  part1.py  part2.py
aoc24/day-16/: Cargo.toml  main.py  part1.py  part2.py
aoc24/day-17/: Cargo.toml  main.py  (+3 more)
aoc25/: Cargo.toml  aoc25.py  day1.py  justfile  pyproject.toml  pyproject.toml.bak
(+288 files in other folders)
