[tool.poetry]
name = "aoc22"
version = "0.1.0"
description = "Advent of code 22"
authors = ["Marco Silva <mail@marco-silva.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
sympy = "^1.11.1"
defaultlist = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
