[tool.poetry]
name = "aoc23"
version = "0.1.0"
description = "Advent of code 23"
authors = ["Marco Silva <mail@marco-silva.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
sympy = "^1.11.1"
defaultlist = "^1.0.0"
structlog = "^23.2.0"
astar = "^0.99"
pytest = "^7.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aoc = "aoc23:main"

