[tool.poetry]
name = "aoc24"
version = "0.1.0"
description = "Advent of code 24"
authors = ["Marco Silva <mail@marco-silva.com>"]

[tool.poetry.dependencies]
python = "^3.12"
black = "^22.10.0"
sympy = "^1.11.1"
defaultlist = "^1.0.0"
structlog = "^23.2.0"
astar = "^0.99"
pytest = "^7.4.3"
numpy = "^1.26.2"
cachetools = "^5.3.2"
shapely = "^2.0.2"
igraph = "^0.11.3"
matplotlib = "^3.8.2"
networkx = "^3.2.1"
scipy = "^1.11.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aoc = "aoc24:main"

