[project]
name = "aoc25"
version = "0.1.0"
description = "Advent of code 25"
readme = "README.md"
authors = [{ name = "Marco Silva", email = "mail@marco-silva.com" }]
requires-python = ">=3.14"
dependencies = [
    "astar>=0.99",
    "black>=22.12.0",
    "cachetools>=6.2.2",
    "defaultlist>=1.2.0",
    "geopandas>=1.1.1",
    "igraph>=1.0.0",
    "libpysal>=4.13.0",
    "more-itertools>=10.8.0",
    "networkx>=3.6",
    "numpy>=2.3.5",
    "pytest>=9.0.1",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
    "structlog>=25.5.0",
    "sympy>=1.14.0",
]
